...
                  child: Padding(
                    padding: const EdgeInsets.fromLTRB(16, 0, 16, 16),
                    child: Column(
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: [
                        SectionHeader(
                          title: 'Seus Favoritos',
                          onPressed: () {},
                        ),
                        const FavoritesSectionBuilder(),
                        const SizedBox(height: 12),
                      HomeMyEventsCarousel(
                        myEventsFilteredStreamValue:
...
